--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+
+# Additions for VSCode
+.vscode
+.classpath
+.project
+.settings
